# media-subscriber

./: .envrc  .gitignore  Cargo.toml  ci.nix  flake.nix  result  rustfmt.toml  shell.nix
.direnv/: flake-profile-207a1a300056efa19040aacb765869a66da20496  flake-profile-207a1a300056efa19040aacb765869a66da20496.rc
.direnv/flake-inputs/: 09yvj6yyxspzfivv91bcxwrjxawpk1g2-source  7ywsig90qr2bad4l4ha257iaiq0sggl5-source  v809fzi8n78rcbvx2xrd4n7r4y7rb2q9-source
.github/workflows/: devshell.yml
back_end/: Cargo.toml
back_end/src/: docs.rs  main.rs  routes.rs  services.rs
back_end/src/routes/youtube/: channel.rs  mod.rs  types.rs
backend/: Cargo.toml  build.rs
backend/.sqlx/: query-255daa11f7dd5ce62d08e7473d6f85b4e911a478c147c3f694888e3605a7d411.json  query-9f545100fbe086c6d47aca576aa37d46bdb8f14b32aa6eee4f9b06e751e48778.json
backend/migrations/: .sqlfluff  20231001031316_add_user.up.sql  V1__create_schema.sql  V2__test_tag.sql
backend/queries/: .sqlfluff  tag.sql  ytb.sql
backend/src/: config.rs  cornucopia.rs  db.rs  docs.rs  errors.rs  extractors.rs  main.rs  services.rs  store.rs  utils.rs
backend/src/routes/: auth.rs  mod.rs  user.rs
backend/src/routes/youtube/: channel.rs  mod.rs  search.rs  tag.rs  types.rs
env_config/: backend.toml  ci.toml  db.toml  frontend.toml  postgres.nix  server.toml
front_end/: package-lock.json
frontend/: package-lock.json  package.json
frontend/src/: App.svelte  app.css
frontend/src/js/: fetch.js
frontend/src/pages/: Avatarlist.svelte  Imgcontainer.svelte  Tagsnavteil.svelte  Videodetail.svelte  Videopreview.svelte  Videospool.svelte
