[package]
name = "media-subscriber-backend"
version = "0.4.1"
edition = "2021"
repository = "https://github.com/jbertovic/svelte-axum-project"
keywords = ["template", "backend", "frontend", "axum", "svelte"]
license = ""
categories = []
description = ""
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version="0.6.20", features = ["headers"] }
tower-http = { version = "0.4", features = ["full"] }
axum-sessions = "0.5"
tokio = { version = "1.24", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.16.1", features = ["derive"] }
axum-valid = "0.8.0"
humantime-serde = "1.1.1"
ytd-rs = { version = "0.1.7", features = ["yt-dlp"] }
