[package]
name = "media-subscriber-backend"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/WeissP/media-subscriber"
keywords = ["backend", "frontend", "axum", "svelte", "youtube"]
license = ""
categories = []
description = ""
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive", "rc"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
humantime-serde = "1.1.1"

invidious = { version="0.7.2", default-features = false, features = ["reqwest_async"] }

axum = { version="0.6.20", features = ["headers"] }
tower-http = { version = "0.4", features = ["full"] }
axum-valid = "0.8.0"
validator = { version = "0.16.1", features = ["derive"] }
axum-extra = "0.7.4"
axum-macros = "0.3.0"
serde_json = "1.0.107"
strum = { version = "0.25.0", features = ["derive"] }
axum-jsonschema = { version = "0.6.0", features = ["aide"] }
schemars = { version = "0.8.10", features = ["uuid1"] }
aide = { version = "0.11.0", features = [
    "redoc",
    "axum",
    "axum-extra",
    "macros",
] }
tracing-appender = "0.2.2"
clap = { version = "4.4.6", features = ["derive", "env"] }
anyhow = "1.0.75"
getset-scoped = "0.1.2"
thiserror = "1.0.49"
argon2 = "0.5.2"
rand = "0.8.5"
tower-sessions = { version = "0.2.2" }
tower = "0.4.13"
time = "0.3.29"
refinery = { version = "0.8.11", features = ["tokio-postgres"] }
tokio-postgres = { version = "0.7.10", features = [ "with-time-0_3",] }
futures = "0.3.28"
postgres-types = "0.2.6"
cornucopia_async = "0.4.0"
deadpool-postgres = "0.10.3"

[build-dependencies]
cornucopia = "0.9.0"
postgres = "0.19.7"
